Criando projeto de infra, e classe para inserir no repositorio de pagamentos

--- a/EventSourcing_Pagamento.API/EventSourcing_Pagamento.API.csproj
+++ b/EventSourcing_Pagamento.API/EventSourcing_Pagamento.API.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <ProjectReference Include="..\EventSourcing_Pagamento.Aplicacao\EventSourcing_Pagamento.Aplicacao.csproj" />
       <ProjectReference Include="..\EventSourcing_Pagamento.Dominio\EventSourcing_Pagamento.Dominio.csproj" />
+      <ProjectReference Include="..\EventSourcing_Pagamento.Infra\EventSourcing_Pagamento.Infra.csproj" />
     </ItemGroup>
 
 
