--- a/EventSourcing_Pagamento.Infra/EventSourcing_Pagamento.Infra.csproj
+++ b/EventSourcing_Pagamento.Infra/EventSourcing_Pagamento.Infra.csproj
@@ -4,4 +4,14 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\EventSourcing_Pagamento.Aplicacao\EventSourcing_Pagamento.Aplicacao.csproj" />
+      <ProjectReference Include="..\EventSourcing_Pagamento.Dominio\EventSourcing_Pagamento.Dominio.csproj" />
+    </ItemGroup>
+
 </Project>
