Criando fluxo de alteração de cartao de credito e reprocessamento do pagamento

--- a/EventSourcing_Pagamento.Aplicacao.Test/EventSourcing_Pagamento.Aplicacao.Test.csproj
+++ b/EventSourcing_Pagamento.Aplicacao.Test/EventSourcing_Pagamento.Aplicacao.Test.csproj
@@ -17,6 +17,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\EventSourcing_Pagamento.Aplicacao\EventSourcing_Pagamento.Aplicacao.csproj" />
+      <ProjectReference Include="..\EventSourcing_Pagamento.Test.Helpers\EventSourcing_Pagamento.Test.Helpers.csproj" />
     </ItemGroup>
 
 </Project>
