Retirando connection string chumbada

--- a/EventSourcing_Pagamento.API/appsettings.Development.json
+++ b/EventSourcing_Pagamento.API/appsettings.Development.json
@@ -6,6 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Password=vhpr1706;Persist Security Info=True;User ID=sa;Initial Catalog=EventSourcingPagamento;Data Source=DESKTOP-NEOJFCR\\MSSQLSERVER2019"
+  },
   "RabbitConnection": "host=127.0.0.1",
   "RabbitQueue": "PedidoPagamento"
 }
